# doxy2md

./: .gitignore  CMakeLists.txt  MANUAL.md  README.md  bootstrap.cmake  sl_workspace_settings.json
.github/workflows/: ApiTest.yml
SDK/: CMakeLists.txt  depends.code-workspace
app/: CMakeLists.txt
app/src/: Application.cpp  Application.hpp  CMakeLists.txt  Configuration.cpp  Configuration.hpp  DoxyJson.cpp  DoxyJson.hpp  IO.hpp  Options.hpp  macros.hpp  main.cpp
tests/: CMakeLists.txt
